Fix private data extension

--- a/ckanext/privatedatasets/assets/webassets.yml
+++ b/ckanext/privatedatasets/assets/webassets.yml
@@ -11,4 +11,4 @@ main-css:
   output: ckanext-privatedatasets/%(version)s_main.css
   filter: cssrewrite
   contents:
-    - css/custom.css
+    - custom.css
